# bevy_wasmcloud_codegen

./: .gitignore  Cargo.toml  Makefile  h.json  install_wasmcloud.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: host_core.yml
src/: actor.rs  config.rs  error.rs  gen.rs  lib.rs
templates/: Cargo.toml  Makefile  readme.md
templates/actors/game_logic/: Cargo.toml  Makefile
templates/actors/game_logic/src/: lib.rs
templates/actors/game_logic/src/client_message_handlers/: welcome_handler.rs
templates/configs/: manifest.yaml
templates/shared/src/: bundle.rs
templates/www/: Cargo.toml  Makefile.toml  nohup.out
templates/www/crates/components/protocol/: Cargo.toml
templates/www/crates/components/protocol/src/: lib.rs
templates/www/crates/plugins/protocol/src/: c_.rs  lib.rs  wasm.rs
templates/www/crates/plugins/protocol/src/startup/: new_ball.rs
templates/www/public/pkg/: boltless-client.d.ts  boltless-client.js  boltless-client_bg.wasm.d.ts
